<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_show_favorites"
        android:icon="@drawable/ic_star_outline"
        android:title="@string/action_show_favorites"
        android:checkable="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_sort_date"
                android:title="@string/sort_by_date" />
            <item
                android:id="@+id/action_sort_size_asc"
                android:title="@string/sort_by_size_asc" />
            <item
                android:id="@+id/action_sort_size_desc"
                android:title="@string/sort_by_size_desc" />
        </menu>
    </item>

    <item
        android:id="@+id/action_export_csv"
        android:title="@string/action_export_csv"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_all"
        android:title="@string/action_clear_all"
        android:orderInCategory="101"
        app:showAsAction="never" />
</menu>