<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/converterFragment">

    <fragment
        android:id="@+id/converterFragment"
        android:name="in.udhaya.kaikanakku.ui.converter.ConverterFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_converter">
        <argument
            android:name="reuseKol"
            app:argType="integer"
            android:defaultValue="0" />
        <argument
            android:name="reuseViral"
            app:argType="integer"
            android:defaultValue="0" />
        <argument
            android:name="reuseCm"
            app:argType="float"
            android:defaultValue="0.0" />
        <argument
            android:name="isKolToCm"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>

    <fragment
        android:id="@+id/historyFragment"
        android:name="in.udhaya.kaikanakku.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_historyFragment_to_converterFragment"
            app:destination="@id/converterFragment" />
    </fragment>

    <fragment
        android:id="@+id/calculatorFragment"
        android:name="in.udhaya.kaikanakku.ui.calculator.CalculatorFragment"
        android:label="@string/title_calculator"
        tools:layout="@layout/fragment_calculator" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="in.udhaya.kaikanakku.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />

    <fragment
        android:id="@+id/helpFragment"
        android:name="in.udhaya.kaikanakku.ui.help.HelpFragment"
        android:label="@string/title_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="in.udhaya.kaikanakku.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />

</navigation>